--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 <junit.version>5.12.1</junit.version>  </properties>
 
   <dependencies>
+      <!--Dependency za dotenv -->
       <dependency>
           <groupId>io.github.cdimascio</groupId>
           <artifactId>dotenv-java</artifactId>
@@ -39,11 +40,18 @@
         <artifactId>javafx-swing</artifactId>
         <version>21.0.6</version>
       </dependency>
-<dependency>
+    <dependency>
       <groupId>org.controlsfx</groupId>
       <artifactId>controlsfx</artifactId>
       <version>11.2.1</version>
-    </dependency><dependency>
+    </dependency>
+      <!--Za MySQL-->
+      <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+          <version>8.0.33</version>
+      </dependency>
+      <dependency>
       <groupId>com.dlsc.formsfx</groupId>
       <artifactId>formsfx-core</artifactId>
       <version>11.6.0</version>
