--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,14 @@
       <artifactId>junit-jupiter-engine</artifactId>
       <version>${junit.version}</version>
       <scope>test</scope>
-    </dependency>  </dependencies>
+    </dependency>
+      <dependency>
+          <groupId>org.projectlombok</groupId>
+          <artifactId>lombok</artifactId>
+          <version>1.18.42</version>
+          <scope>provided</scope>
+      </dependency>
+  </dependencies>
 
   <build>
     <plugins>
