--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
           <version>3.0.0</version>
       </dependency>
       <dependency>
+          <groupId>com.zaxxer</groupId>
+          <artifactId>HikariCP</artifactId>
+          <version>5.1.0</version>
+      </dependency>
+      <dependency>
           <groupId>org.mindrot</groupId>
           <artifactId>jbcrypt</artifactId>
           <version>0.4</version>
